# GeaneTrackingCode

./: .gitignore  CMakeLists.txt  README.md
analyses/: CMakeLists.txt  GeaneExtrapolationAna_module.cc  GeaneFailedPlots_module.cc  GeanePlots_module.cc  GeaneRotationTester_module.cc  GeaneSingleEventViewer_module.cc  GeaneTrackSelector_module.cc
fcl/: CMakeLists.txt  RunNearline.fcl  RunRvstCalibration.fcl  RunTrackCaloMatching.fcl  RunTrackingDAQ.fcl  RunTrackingPlots.fcl  RunTrackingSim.fcl  RunTrackingSimGE.fcl  calDigitalizerParams.fcl  digitalizerParams.fcl  fastFitterParams.fcl  fillBuilderParams.fcl  geaneFitParams.fcl  longTrackFinderParams.fcl  moduleTestStandGeomPatch.fcl  recoClusterParams.fcl  recoFindingParams.fcl  recoFormationParams.fcl  recoIslandParams.fcl  recoSeedParams.fcl  recoT0FinderParams.fcl  recoVertexParams.fcl  strawCommonParams.fcl  trackingConfig.fcl
filters/: CMakeLists.txt  GeanePoorEvent_module.cc  GeaneProcessSelection_module.cc  NoDigitsFilter_module.cc  TrackFilter_module.cc
fitter/: CMakeLists.txt  Geane5x5Fitter.cc  Geane5x5Fitter.hh  GeaneFitter.cc  GeaneFitter.hh  TrackFitter.cc  TrackFitter.hh
macros/: CBOPlots.C  FFTPlots.C  MeanRMSPlot.C  geanePlotsMacro.C  plotsCBOFit.C  plotsCBOWidthFit.C  readProfessorTree.C
reco/: CMakeLists.txt  GeaneExtrapolation_module.cc  GeaneReco_module.cc
scripts/: generateGeaneEvents.sh  generateGeaneTracks.sh  haddGEANE.sh  setupGrid  submit-geane-events.sh  submit-geane-tracks.sh
utils/: CMakeLists.txt  GeaneDummyUtils.cc  GeaneDummyUtils.hh  GeaneEigenStorageUtils.cc  GeaneEigenStorageUtils.hh  GeaneExtrapolationUtils.cc  GeaneExtrapolationUtils.hh  GeaneFittingUtils.cc  GeaneFittingUtils.hh  GeaneLRUtils.cc  GeaneLRUtils.hh  GeaneParamUtils.cc  GeaneParamUtils.hh  GeaneTrackUtils.cc  GeaneTrackUtils.hh  LeftRightUtils.cc  LeftRightUtils.hh  LongTrackFindingUtils.cc  LongTrackFindingUtils.hh  SimpleTrackFindingUtils.cc  SimpleTrackFindingUtils.hh  StrawGeomUtils.cc  StrawGeomUtils.hh
